[package]
name = "harmony_hub_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
socketioxide = { version = "0.9.0", features = ["state", "tracing", "extensions"] }
tokio = { version = "1.35", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5", features = ["cors", "fs"] }
tower = "0.4"
chrono = "0.4.31"
random-string = "1.0.1"
uuid = { version = "1.6.1", features = ["v4"] }
futures = "0.3.29"